<resources>
    <string name="app_name">Metrolog</string>
    <string name="nav_home">Главная</string>
    <string name="nav_version">Версия приложения</string>
    <string name="nav_settings">Настройки</string>
    <string name="drawer_open">Открыть меню</string>
    <string name="drawer_close">Закрыть меню</string>
    <string name="version_dialog_message">МЕТРОЛОГ
version 0.1
S.N.Pavlov 2025</string>
    <string name="ok">ОК</string>
    <string name="settings_placeholder">Раздел настроек в разработке</string>
    <string name="option_scale_signal">Шкала-сигнал</string>
    <string name="option_units">Единицы измерения</string>
    <string name="units_screen_title">Единицы измерения</string>
    <string name="units_option_temperature">Температура</string>
    <string name="units_option_mass">Масса</string>
    <string name="units_option_length">Длина</string>
    <string name="units_option_speed">Скорость</string>
    <string name="units_option_acceleration">Ускорение</string>
    <string name="units_option_time">Время</string>
    <string name="units_option_pressure">Давление</string>
    <string name="units_option_density">Плотность</string>
    <string name="temperature_screen_title">Преобразование температуры</string>
    <string name="speed_screen_title">Преобразование скорости</string>
    <string name="acceleration_screen_title">Преобразование ускорения</string>
    <string name="time_screen_title">Преобразование времени</string>
    <string name="pressure_screen_title">Преобразование давления</string>
    <string name="density_screen_title">Преобразование плотности</string>
    <string name="mass_screen_title">Преобразование массы</string>
    <string name="length_screen_title">Преобразование длины</string>
    <string name="temperature_block_si">Международная система (СИ)</string>
    <string name="acceleration_block_si">Международная система (СИ)</string>
    <string name="time_block_si">Международная система (СИ)</string>
    <string name="pressure_block_si">Международная система (СИ)</string>
    <string name="speed_block_si">Международная система (СИ)</string>
    <string name="mass_block_si">Международная система (СИ)</string>
    <string name="length_block_si">Международная система (СИ)</string>
    <string name="temperature_block_us">США и Британия</string>
    <string name="acceleration_block_derived">Производные и внесистемные</string>
    <string name="acceleration_block_us">США и Британия</string>
    <string name="speed_block_derived">Производные и внесистемные</string>
    <string name="speed_block_us">США и Британия</string>
    <string name="speed_block_marine">Морские единицы</string>
    <string name="pressure_block_derived">Производные и внесистемные</string>
    <string name="pressure_block_us_uk">США и Британия</string>
    <string name="pressure_block_us">США</string>
    <string name="pressure_block_uk">Британия</string>
    <string name="mass_block_derived">Производные и внесистемные</string>
    <string name="length_block_derived">Производные и внесистемные</string>
    <string name="mass_block_us_uk">США и Британия</string>
    <string name="length_block_us_uk">США и Британия</string>
    <string name="mass_block_us">США</string>
    <string name="length_block_marine_international">Международные морские единицы</string>
    <string name="length_block_marine_us">Морские единицы США</string>
    <string name="mass_block_uk">Британия</string>
    <string name="length_block_marine_uk">Британские морские единицы</string>
    <string name="mass_block_troy">Тройская система</string>
    <string name="time_block_non_si">Внесистемные</string>
    <string name="temperature_block_other">Прочие</string>
    <string name="temperature_kelvin_hint">Температура в Кельвинах</string>
    <string name="temperature_celsius_hint">Температура в Цельсиях</string>
    <string name="temperature_fahrenheit_hint">Температура в Фаренгейтах</string>
    <string name="temperature_rankine_hint">Температура в Ранкинах</string>
    <string name="temperature_reaumur_hint">Температура в Реомюрах</string>
    <string name="pressure_pascal_hint">Давление в Паскалях</string>
    <string name="pressure_kgf_cm2_hint">Давление в килограмм-силах на квадратный сантиметр</string>
    <string name="pressure_kgf_m2_hint">Давление в килограмм-силах на квадратный метр</string>
    <string name="pressure_millibar_hint">Давление в миллибарах</string>
    <string name="pressure_bar_hint">Давление в барах</string>
    <string name="pressure_kpa_hint">Давление в килопаскалях</string>
    <string name="pressure_mpa_hint">Давление в мегапаскалях</string>
    <string name="pressure_newton_m2_hint">Давление в ньютонах на квадратный метр</string>
    <string name="pressure_kilonewton_m2_hint">Давление в килоньютонах на квадратный метр</string>
    <string name="pressure_meganewton_m2_hint">Давление в меганьютонах на квадратный метр</string>
    <string name="pressure_newton_cm2_hint">Давление в ньютонах на квадратный сантиметр</string>
    <string name="pressure_newton_mm2_hint">Давление в ньютонах на квадратный миллиметр</string>
    <string name="pressure_atmosphere_physical_hint">Давление в физических атмосферах</string>
    <string name="pressure_atmosphere_technical_hint">Давление в технических атмосферах</string>
    <string name="pressure_mm_h2o_hint">Давление в миллиметрах водяного столба</string>
    <string name="pressure_cm_h2o_hint">Давление в сантиметрах водяного столба</string>
    <string name="pressure_m_h2o_hint">Давление в метрах водяного столба</string>
    <string name="pressure_in_h2o_hint">Давление в дюймах водяного столба</string>
    <string name="pressure_ft_h2o_hint">Давление в футах водяного столба</string>
    <string name="pressure_mm_hg_hint">Давление в миллиметрах ртутного столба</string>
    <string name="pressure_cm_hg_hint">Давление в сантиметрах ртутного столба</string>
    <string name="pressure_in_hg_hint">Давление в дюймах ртутного столба</string>
    <string name="pressure_ksi_hint">Давление в ksi</string>
    <string name="pressure_psi_hint">Давление в psi</string>
    <string name="pressure_psf_hint">Давление в psf</string>
    <string name="pressure_tsi_us_hint">Давление в tsi (США)</string>
    <string name="pressure_tsf_us_hint">Давление в tsf (США)</string>
    <string name="pressure_tsi_uk_hint">Давление в tsi (Британия)</string>
    <string name="pressure_tsf_uk_hint">Давление в tsf (Британия)</string>
    <string name="density_kg_m3_hint">Плотность в килограммах на кубический метр</string>
    <string name="density_t_m3_hint">Плотность в тоннах на кубический метр</string>
    <string name="density_g_m3_hint">Плотность в граммах на кубический метр</string>
    <string name="density_mg_m3_hint">Плотность в миллиграммах на кубический метр</string>
    <string name="density_kg_l_hint">Плотность в килограммах на литр</string>
    <string name="density_g_l_hint">Плотность в граммах на литр</string>
    <string name="density_g_ml_hint">Плотность в граммах на миллилитр</string>
    <string name="density_lb_yd3_hint">Плотность в фунтах на кубический ярд</string>
    <string name="density_lb_ft3_hint">Плотность в фунтах на кубический фут</string>
    <string name="density_lb_in3_hint">Плотность в фунтах на кубический дюйм</string>
    <string name="density_lb_gal_hint">Плотность в фунтах на галлон (США)</string>
    <string name="density_lb_bu_hint">Плотность в фунтах на бушель</string>
    <string name="density_oz_yd3_hint">Плотность в унциях на кубический ярд</string>
    <string name="density_oz_ft3_hint">Плотность в унциях на кубический фут</string>
    <string name="density_oz_in3_hint">Плотность в унциях на кубический дюйм</string>
    <string name="density_oz_gal_hint">Плотность в унциях на галлон (США)</string>
    <string name="density_oz_bu_hint">Плотность в унциях на бушель</string>
    <string name="density_lb_gal_uk_hint">Плотность в фунтах на галлон (Британия)</string>
    <string name="density_oz_gal_uk_hint">Плотность в унциях на галлон (Британия)</string>
    <string name="time_seconds_hint">Время в секундах</string>
    <string name="time_nanoseconds_hint">Время в наносекундах</string>
    <string name="time_microseconds_hint">Время в микросекундах</string>
    <string name="time_milliseconds_hint">Время в миллисекундах</string>
    <string name="time_minutes_hint">Время в минутах</string>
    <string name="time_hours_hint">Время в часах</string>
    <string name="time_days_hint">Время в сутках</string>
    <string name="time_weeks_hint">Время в неделях</string>
    <string name="time_years_hint">Время в годах</string>
    <string name="time_centuries_hint">Время в веках</string>
    <string name="time_millennia_hint">Время в тысячелетиях</string>
    <string name="acceleration_mps2_hint">Ускорение в метрах в секунду в квадрате</string>
    <string name="acceleration_kmps2_hint">Ускорение в километрах в секунду в квадрате</string>
    <string name="acceleration_mmps2_hint">Ускорение в миллиметрах в секунду в квадрате</string>
    <string name="acceleration_mileps2_hint">Ускорение в милях в секунду в квадрате</string>
    <string name="acceleration_footps2_hint">Ускорение в футах в секунду в квадрате</string>
    <string name="acceleration_inchps2_hint">Ускорение в дюймах в секунду в квадрате</string>
    <string name="speed_mps_hint">Скорость в метрах в секунду</string>
    <string name="speed_kmps_hint">Скорость в километрах в секунду</string>
    <string name="speed_kmph_hint">Скорость в километрах в час</string>
    <string name="speed_mpm_hint">Скорость в метрах в минуту</string>
    <string name="speed_mileps_hint">Скорость в милях в секунду</string>
    <string name="speed_mph_hint">Скорость в милях в час</string>
    <string name="speed_fps_hint">Скорость в футах в секунду</string>
    <string name="speed_fpm_hint">Скорость в футах в минуту</string>
    <string name="speed_kn_hint">Скорость в узлах</string>
    <string name="speed_marine_mph_hint">Скорость в морских милях в час</string>
    <string name="mass_kilogram_hint">Масса в килограммах</string>
    <string name="mass_milligram_hint">Масса в миллиграммах</string>
    <string name="mass_gram_hint">Масса в граммах</string>
    <string name="mass_centner_hint">Масса в центнерах</string>
    <string name="mass_tonne_hint">Масса в тоннах</string>
    <string name="mass_carat_hint">Масса в каратах</string>
    <string name="mass_newton_hint">Сила в ньютонах</string>
    <string name="mass_stone_hint">Масса в стоунах</string>
    <string name="mass_pound_hint">Масса в фунтах</string>
    <string name="mass_ounce_hint">Масса в унциях</string>
    <string name="mass_dram_av_hint">Масса в драмах (авердюпуа)</string>
    <string name="mass_grain_hint">Масса в гранах</string>
    <string name="mass_short_ton_hint">Масса в коротких тоннах</string>
    <string name="mass_short_cwt_hint">Масса в коротких центнерах</string>
    <string name="mass_long_ton_hint">Масса в длинных тоннах</string>
    <string name="mass_long_cwt_hint">Масса в длинных центнерах</string>
    <string name="mass_troy_pound_hint">Масса в тройских фунтах</string>
    <string name="mass_troy_ounce_hint">Масса в тройских унциях</string>
    <string name="mass_pennyweight_hint">Масса в пеннивейт</string>
    <string name="mass_mite_hint">Масса в майтах</string>
    <string name="mass_troy_dram_hint">Масса в тройских драмах</string>
    <string name="scale_type_label">Тип шкалы</string>
    <string name="physical_quantity_label">Физическая величина</string>
    <string name="unified_signal_label">Унифицированный сигнал</string>
    <string name="scale_start_hint">Начало</string>
    <string name="scale_end_hint">Конец</string>
    <string name="scale_value_hint">Физическая величина</string>
    <string name="signal_start_hint">Начало</string>
    <string name="signal_end_hint">Конец</string>
    <string name="signal_value_hint">Унифицированный сигнал</string>
</resources>